Fix pill layout: step NW (perpendicular to long axis) for true side-by-side spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -87,23 +87,23 @@ body {
 }
 
 .pill-1 {
-  bottom: 32%;
-  right: 3%;
+  bottom: 10px;
+  right: 5px;
 }
 
 .pill-2 {
-  bottom: 21%;
-  right: 14%;
+  bottom: 65px;
+  right: 60px;
 }
 
 .pill-3 {
-  bottom: 10%;
-  right: 25%;
+  bottom: 120px;
+  right: 115px;
 }
 
 .pill-4 {
-  bottom: -1%;
-  right: 36%;
+  bottom: 175px;
+  right: 170px;
 }
 
 .left-inner {
